examples/test/testpolicy4398.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4398
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key25: value6
      key8: value16
      key15: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value2
          key14: value0
      podSelector:
        matchLabels:
          key44: value43
          key28: value47
